# recursive-stwo-bitcoin

./: Cargo.toml  LICENSE  README.md
bitcoin_dsl/: Cargo.toml
bitcoin_dsl/src/: bar.rs  bitcoin_system.rs  compiler.rs  ldm.rs  lib.rs
bitcoin_dsl/src/basic/: bool.rs  i32.rs  mod.rs  sha256_hash.rs  str.rs  u8.rs
covenant/: Cargo.toml
covenant/src/: lib.rs
delegation/: Cargo.toml
delegation/src/: lib.rs
delegation/src/decommit/: mod.rs
delegation/src/fiat_shamir/: mod.rs  part1.rs
delegation/src/folding/: first_layer.rs  inner_layers.rs  merkle_proofs.rs  mod.rs
delegation/src/script/: mod.rs  part1.rs  part2.rs  part3.rs  part4.rs  part5.rs
demo/: 1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  134.txt  (+136 more)
last/: Cargo.toml
last/src/script/: hints.rs  mod.rs  part1.rs  part10.rs  part11.rs  part12.rs  part13.rs  part2.rs  part3.rs  part6.rs  part7.rs  part8.rs  part_last.rs
last/src/script/fiat_shamir/: hints.rs  mod.rs  part1.rs  part3.rs  part4.rs  part6.rs
last/src/script/global/: mod.rs  part10_logup.rs  part11_point_shift.rs  part12_line_coeffs.rs  part13_line_coeffs.rs  part14_line_coeffs.rs  part1_fiat_shamir.rs  part3_fiat_shamir.rs  part5_composition.rs  part6_composition.rs  part9_coset_vanishing.rs
last/src/script/hints/: answer.rs  decommit.rs  fiat_shamir.rs  folding.rs  mod.rs
last/src/script/per_query/: mod.rs  part10_folding.rs  part11_folding.rs  part12_folding.rs  part13_clear.rs  part1_domain_point.rs  part2_numerator.rs  part3_numerator.rs  part4_numerator.rs  part5_numerator.rs  part6_numerator.rs  part7_numerator.rs  part8_fri_decommitment.rs  part9_folding.rs
primitives/: Cargo.toml
primitives/src/: cm31.rs  cm31_limbs.rs  lib.rs  m31.rs  m31_limbs.rs  qm31.rs  qm31_limbs.rs  utils.rs
primitives/src/bits/: mod.rs
primitives/src/channel/: mod.rs  sha256.rs  utils.rs
primitives/src/circle/: mod.rs  precomputed.rs
primitives/src/composition/: mod.rs
primitives/src/fields/: cm31.rs  cm31_limbs.rs  m31.rs  m31_limbs.rs  mod.rs  qm31.rs  qm31_limbs.rs
primitives/src/fields/table/: lookup.rs  m31.rs  mod.rs
primitives/src/input_sum/: mod.rs
primitives/src/pow/: mod.rs
primitives/src/proof/: mod.rs
primitives/src/quotient/: mod.rs
primitives/src/table/: lookup.rs  m31.rs  utils.rs
