[workspace]
members = ["bitcoin_dsl", "delegation", "last", "primitives", "covenant"]
resolver = "2"

[workspace.dependencies]
indexmap = "2.7.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
bitcoin-script = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/rust-bitcoin-script"}
bitcoin = "0.32.5"
bitcoin-scriptexec = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/rust-bitcoin-scriptexec/", features = ["debug"] }
fenwick-tree = "0.1.0"
anyhow = "1.0.97"
serde = "1.0.216"
serde_json = "1.0"
bincode = "1.3.3"
sha2 = "0.10.8"
num-traits = "0.2.19"
stwo-prover = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/stwo-circle-poseidon-plonk/", branch = "cp-poseidon-flattened", features = ["parallel"] }
rust-bitcoin-m31 = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/rust-bitcoin-m31" }
circle-plonk-dsl-hints = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/recursive-stwo" }
circle-plonk-dsl-last-folding = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/recursive-stwo" }
circle-plonk-dsl-last-fiat-shamir = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/recursive-stwo" }
circle-plonk-dsl-last-answer = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/recursive-stwo" }
itertools = "0.14.0"
rayon = "1.10.0"
covenants-gadgets = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/covenants-gadgets", tag = "1.1.1" }
bitcoin-simulator = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/bitcoin-simulator", tag = "1.1.0" }
clap = { version = "4.5.28", features = ["derive"] }
hex = "0.4.3"
colored = "3.0.0"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 3
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true

[patch.'https://github.com/Bitcoin-Wildlife-Sanctuary/stwo-circle-poseidon-plonk/']
stwo-prover = { path = "../stwo-circle-poseidon-plonk/crates/prover" }