[package]
name = "recursive-stwo-bitcoin-dsl"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
anyhow.workspace = true
bitcoin.workspace = true
bitcoin-script.workspace = true
bitcoin-scriptexec.workspace = true
indexmap.workspace = true
fenwick-tree.workspace = true
num-traits.workspace = true
sha2.workspace = true
rand.workspace = true
rand_chacha.workspace = true
bincode.workspace = true
stwo-prover.workspace = true