[package]
name = "recursive-stwo-last"
version = "0.1.0"
edition = "2021"

[dependencies]
recursive-stwo-bitcoin-dsl = { path = "../bitcoin_dsl" }
recursive-stwo-delegation = { path = "../delegation" }
recursive-stwo-primitives = { path = "../primitives" }
anyhow.workspace = true
circle-plonk-dsl-hints.workspace = true
circle-plonk-dsl-last-folding.workspace = true
circle-plonk-dsl-last-fiat-shamir.workspace = true
circle-plonk-dsl-last-answer.workspace = true
stwo-prover.workspace = true
bincode.workspace = true
num-traits.workspace = true
itertools.workspace = true
serde.workspace = true
sha2.workspace = true
bitcoin.workspace = true